@@ -323,7 +323,13 @@ table tbody.summary td {
   color: gray;
 }
 
-.summary-line {
+.summary-line-2 {
   padding-top: 2px !important;
   padding-bottom: 2px !important;
+}
+
+.summary-line-0 {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+  padding-left: 0px !important;
 }
