@@ -135,6 +135,7 @@ trait DetaiFormatter {
       val count = metaResults.size
       val metaStatus = EvalStatus(metaResults.map(_.evalStatus))
       val status = metaStatus.keyword
+      val summaryColWidhts = calcColWidths(metaResults, metaResults)
       div(`class` := s"panel panel-${cssStatus(status)} bg-${bgStatus(status)}",
         ul(`class` := "list-group",
           li(`class` := s"list-group-item list-group-item-${bgStatus(status)}", style := "padding: 10px 10px; margin-right: 10px;",
@@ -161,7 +162,7 @@ trait DetaiFormatter {
                       (res, rowIndex) <- metaResults.zipWithIndex
                       reportPath = if (GwenSettings.`gwen.report.suppress.meta`) None else Some(s"meta/${reportFiles.tail(rowIndex).getName}")
                     } yield {
-                      formatSummaryLine(options, res, reportPath, None, rowIndex)
+                      formatSummaryLine(options, res, reportPath, None, rowIndex, summaryColWidhts)
                     }
                   )
                 )
