@@ -1,7 +1,8 @@
 3.11.3
 ======
-Apr 21, 2022
+Apr 22, 2022
 - Fix positioning of attachments dropdown and video buttons in HTML reports
+- Improve layout of summary lines in HTML reports
 
 3.11.2
 ======
